# sugi-atlas

./: .gitignore  LICENSE  README.md  SPEC_drug_entity.md  SPEC_drug_indication_biomarker.md  atlas.sh  corpus-stats.tmp.md  issues.md  pyproject.toml
.enju/locks/: project.lock.owner
corpus/: diseases.txt  drugs.txt  genes.txt
corpus/dense/: diseases.txt  genes.txt
data/background/: family.json  go.json  reactome.json
docs/: BIOBTREE_ISSUES.md  MOLECULAR_ENRICHMENT.md  PAGE_CONTRACT.md  README.md  biobtree_grpc_pagesize_request.md  biobtree_mondo_xrefs_request.md  disease.md  drug.md  gene.md  how-it-works.md  mesh.md
docs/research/: 01_landscape_and_ai.md  02_biobtree_mining.md  03_page_audit.md  04_improvement_analysis.md  05_unique_ai_attraction.md  06_admission_gates.md  NEXT.md  README.md
docs/site-drafts/: README.md  llms.txt  robots.txt
logs/: dense-rebuild.latest
scripts/: build_corpus.py  run_batch.sh
src/atlas/: atomicio.py  batch.py  build_background.py  build_corpus.py  civic.py  indication.py  ora.py  pipeline.py  render_common.py  section.py  stats.py
tests/: conftest.py
tests/integration/: _harness.py  conftest.py  test_contract.py  test_coverage.py  test_frontmatter.py  test_jsonld.py  test_mesh.py  test_quality.py  test_regression.py  test_transport_parity.py
tests/unit/: test_anatomy_parse.py  test_biobtree_transport.py  test_body_gate.py  test_data_pickups.py  test_declarative.py  test_definitional_genes.py  test_evidence.py  test_faers.py  test_go_reactome_evidence.py  test_indication.py  test_jsonld.py  test_layer_b.py  test_meta_facts.py  test_ora.py  test_pval.py  (+3 more)
(+1693 files in other folders)
