[project]
name = "atlas"
version = "0.1.0"
description = "Atlas — comprehensive bio atlas for genes, drugs, and diseases (deterministic biobtree collector + LLM summary)"
requires-python = ">=3.9"
authors = [{ name = "Tamer Gur" }]

[project.optional-dependencies]
dev = ["pytest>=7"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
