[project]
name = "atlas"
version = "0.1.0"
description = "Atlas — comprehensive bio atlas for genes, drugs, and diseases (deterministic biobtree collector + LLM summary)"
requires-python = ">=3.9"
authors = [{ name = "Tamer Gur" }]

[project.optional-dependencies]
dev = ["pytest>=7", "PyYAML>=6"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
markers = [
    "integration: corpus-level checks over a built dist (skipped if absent; set ATLAS_INTEGRATION_DIST)",
]

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
